--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Module 2 Coding Assignment</title>
 </head>
 <body>
-
+<h1>Getting started!</h1>
 </body>
 </html>
