--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -14,7 +14,7 @@
 
     <nav id="header-nav" class="navbar navbar-default">
 
-      <div class="container">
+      <div class="container-fluid">
 
           <div class="navbar-header">
 
@@ -47,7 +47,7 @@
 
   </header>
 
-  <div id="main-content" class="container">
+  <div id="main-content" class="container-fluid">
 
       <h2 id="page-title" class="text-center">Our Menu</h2>
 
